# ot-harjoitustyo

./: .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md
src/: index.py  initialize_database.py
src/entities/: book.py  book_to_read.py
src/repositories/: book_journal_repository.py  reading_list_repository.py
src/services/: book_journal_service.py  reading_list_service.py
src/tests/: conftest.py
src/tests/repositories/: book_journal_repository_test.py  reading_list_repository_test.py
src/tests/services/: book_journal_service_test.py  reading_list_service_test.py
src/ui/: add_note_to_reading_list_view.py  add_read_book_view.py  book_journal_view.py  ui.py
